added mention of lib6 to lab book

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -26,7 +26,7 @@ $>=$ Q30 bases & 92.62\% & 92.13\% \\
 \end{tabular}
 \end{center}
  \chapter{Processing reads}
- RAD-seq data was split into 2 separate libraries: 7 and 7b. Together, the libraries contain 173 F4 individuals from 11 different F3 mothers. There were 96 samples in library 7 (one of which was contaminated) and 77 in library 7b. In total we have 172 valid samples across 11 families
+ RAD-seq data was split into 2 separate libraries: 7 and 7b. Together, the libraries contain 173 F4 individuals from 11 different F3 mothers. There were 96 samples in library 7 (one of which was contaminated) and 77 in library 7b. In total we have 172 valid samples across 11 families. Additionally, I inherited from 28 individuals from another library (lib6) which are offspring from families A and B.
  \section{Quality control}
  fastqc was used for quality control, separately on each file, and on all files together in the library.
  \section{Demultiplexing}
