working on cstacks script

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -28,6 +28,13 @@ $>=$ Q30 bases & 92.62\% & 92.13\% \\
 
 \end{tabular}
 \end{center}
+
+Below is a sketch flowchart of the steps that will be described in this lab book. 
+\begin{figure}
+\includegraphics[scale=0.5]{flowchart}
+\caption{\textbf{Pipeline described in the current lab book}. Diamonds represent data, rectangles represent operations/programs. Operations/programs in blue are included in the makefile, thos in red are not.}
+\end{figure}
+
  \chapter{Processing reads}
  RAD-seq data was split into 2 separate libraries: 7 and 7b. Together, the libraries contain 173 F4 individuals from 11 different F3 mothers. There were 96 samples in library 7 (one of which was contaminated) and 77 in library 7b. In total we have 172 valid samples across 11 families. Additionally, I inherited from 28 individuals from another library (lib6) which are offspring from families A and B.
  \section{Quality control}
