added sample list for cstacks results in lab book

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -204,7 +204,7 @@ Parameters I may want to change are:
 Note: There are also advanced options such as gapped assembly parameters and loci matching multiple catalogue entries, but these are probably not relevant here.
 \subsection{cstacks results}
 
-I changed the number of mismatches allowed between samples between 1 and 4. These are the results with a subset of 11 samples ([A-L&&[^B]]01) because B01 was empty (few, low quality reads). 
+I changed the number of mismatches allowed between samples between 1 and 4. These are the results with a subset of 11 samples $([A-L\&\&[\wedge B]]01)$ because B01 was empty (few, low quality reads). 
 
 \vspace{10px}
 \csvautobooktabular[respect underscore=true]{cstats.csv}
