added TODO list to lab book

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -267,5 +267,12 @@ plotting the inbreeding coefficient per individual with r=75 yields:
 	\end{center}
 \end{figure}
 
+\section{TO DO}
+\begin{itemize}
+\item Check if there is a correlation between coverage depth and homozygosity. If so, this is bad news: alleles from heterozygous loci could be dropped because of low coverage, causing them to becom homozygous.
+\item Use FIS of females to define haploid/diploid males with very stringent settings (few loci). And rerun analysis with less stringent parameters once we know which are haplo/diploid. 
+\item Validate haploid definition using haplotypes deduced from linkage map.
+\end{itemize}
+
 \end{document} 
 \grid
