--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -248,7 +248,7 @@ I ran populations with the following parameters:
 \item -m: 5
 \end{itemize}
 
-Therefore, only locii with at least 5 reads of coverage were included, each loci also needs to be in at least 75\% to 85\% of all individuals and in both populations (males and females).
+Therefore, only loci with at least 5 reads of coverage were included, each loci also needs to be in at least 75\% to 85\% of all individuals and in both populations (males and females).
 
 This table summarizes the first statistics I extracted from the VCF files (using vcftools) with the different values for r:
 \begin{center}
@@ -266,6 +266,10 @@ plotting the inbreeding coefficient per individual with r=75 yields:
 		\caption{Inbreeding coefficient (F). Each plot is a family, each bar is an individual. Blue bars represent males, and pink ones represent females. Green and red squares span the mean +- standard deviation of males and females, respectively.}
 	\end{center}
 \end{figure}
+
+When trying to increase the minimum depth required to 20, the populations module kept crashing. Looking into the log file revealed that the crash always occured when computed the Kernel-smoothed F statistics on the following contig: \\
+>tig00002906 len=9740 reads=14 covStat=12.75 gappedBases=no class=contig suggestRepeat=no suggestCircular=no
+
 
 \section{TO DO}
 \begin{itemize}
