represented mothers in different colors in homozygosity barplots and changed lab book accordingly

--- a/reports/lab_book/lab_book.tex
+++ b/reports/lab_book/lab_book.tex
@@ -262,8 +262,8 @@ plotting the inbreeding coefficient per individual with r=75 yields:
 \begin{figure}[h]
 	\begin{center}
 		\hspace*{-1.5in}
-		\includegraphics[width=1.55\textwidth]{F_r-75}
-		\caption{Inbreeding coefficient (F). Each plot is a family, each bar is an individual. Blue bars represent males, and pink ones represent females. Green and red squares span the mean +- standard deviation of males and females, respectively.}
+		\includegraphics[width=1.55\textwidth]{F_d-25_r-75}
+		\caption{Inbreeding coefficient (F). Each plot is a family, each bar is an individual. Blue bars represent males, and pink ones represent females. color bars on the y axis span the mean +- standard deviation of males and females, respectively.}
 	\end{center}
 \end{figure}
 
